Fixed bug with Tournament routing.

--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
     <div class="container pb-4">
-        <h1 class="display-3"><a class="a-black" href="#!/tournaments/{{ latestTournament.ID }}" role="button">{{ latestTournament.Name }}</a></h1>
+        <h1 class="display-3"><a class="a-black" href="#!/tournament/{{ latestTournament.ID }}" role="button">{{ latestTournament.Name }}</a></h1>
         <div class="float-right pr-4 py-2">
             Starts at {{ latestTournament.Start | date:'MMMM d, yyyy h:mm a Z' }}
         </div>
